# aplikasyon

./: pyproject.toml  requirements.txt
aplikasyon/bonjou/: bonjou.py
